Add pro version for windows

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -179,15 +179,21 @@ flutter:
 # the installation package will be signed automatically by the store.
 msix_config:
   display_name: PicGuard
-  publisher_display_name: PUBLISHER_NAME_PLACEHOLDER
-  identity_name: IDENTITY_NAME_PLACEHOLDER
-#  msix_version: 1.0.0.0 # If not set, the value of `version` is used
   logo_path: snap\gui\picguard.png
   languages: en-us, zh-cn
   architecture: x64
-  publisher: PUBLISHER_PLACEHOLDER
   capabilities: "internetClient,picturesLibrary"
   install_certificate: false
+
+  # msix_version: 1.0.0.0 # If not set, the value of `version` is used
+  # With Your Own Certificate 
+  certificate_path: CERTIFICATE_PATH_PLACEHOLDER
+  certificate_password: CERTIFICATE_PASSWORD_PLACEHOLDER
+
+  # For Publish To Windows Store
+  identity_name: IDENTITY_NAME_PLACEHOLDER
+  publisher: PUBLISHER_PLACEHOLDER
+  publisher_display_name: PUBLISHER_NAME_PLACEHOLDER
 
 flutter_gen:
   output: lib/gen/ # Optional (default: lib/gen/)
