--- a/.github/workflows/test-windows-msix-pro.yml
+++ b/.github/workflows/test-windows-msix-pro.yml
@@ -69,8 +69,9 @@ jobs:
         run: |
           echo $env:RUNNER_TEMP
 
-          Copy-Item -Path "windows\pro\Runner.rc" -Destination "windows\runner\Runner.rc" -Force
           Copy-Item -Path "windows\pro\CMakeLists.txt" -Destination "windows\CMakeLists.txt" -Force
+          Copy-Item -Path "windows\pro\main.cpp" -Destination "windows\runner\main.cpp" -Force
+          Copy-Item -Path "windows\pro\Runner.rc" -Destination "windows\runner\Runner.rc" -Force
 
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
