--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,9 @@
 org.gradle.jvmargs=-Xmx4G
+org.gradle.parallel=true
+
+# Kotlin options
+kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx2g -Xms4g
+
 android.useAndroidX=true
 android.enableJetifier=true
