Migrating to Linux ARM64

--- a/.github/workflows/test-linux-rpm-arm64.yml
+++ b/.github/workflows/test-linux-rpm-arm64.yml
@@ -9,14 +9,30 @@ permissions: read-all
 jobs:
   rpm:
     name: Create linux rpm (aarch64)
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
+      - uses: actions/setup-java@v4
         with:
-          platforms: arm64
+          java-version: "17.x"
+          distribution: 'temurin'
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt install -y rpm patchelf
+
+      - name: Setup Flutter
+        shell: bash
+        run: |
+          chmod +x ./scripts/install-flutter-ubuntu-actions.sh
+          ./scripts/install-flutter-ubuntu-actions.sh
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
 
       - name: Configure .env
         run: |
@@ -24,83 +40,32 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Install qemu-user-static
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Install yq
         run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
+          fi
+          yq --version
 
-      - uses: addnab/docker-run-action@v3
-        with:
-          image: arm64v8/ubuntu:22.04
-          options: |
-            --rm
-            --cap-add SYS_ADMIN
-            --device /dev/fuse
-            --security-opt apparmor:unconfined
-            -v ${{ github.workspace }}:/work
-            --workdir /work
-          shell: bash
-          run: |
-            set -x
-            # Show linux info
-            echo "Show linux info"
-            uname --all
+      - name: Update make_config.yaml
+        run: yq -i '.build_arch = "aarch64"' linux/packaging/rpm/make_config.yaml
 
-            # Install dependencies for Linux
-            echo "Install dependencies for Linux"
-            apt update && apt install -y sudo
-            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
-            sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-            sudo apt install -y rpm patchelf
-            
-            # Install JDK
-            echo "Install JDK"
-            sudo apt install -y wget apt-transport-https gnupg
-            wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | apt-key add -
-            echo "deb https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list
-            sudo apt update
-            sudo apt install -y temurin-17-jdk
-
-            # Setup Flutter
-            echo "Setup Flutter"
-            bash ./scripts/install-flutter-ubuntu.sh
-            
-            if [ -d "/home/linux-arm64/flutter" ]; then
-              echo "🟩 ls -la"
-              ls -la /home/linux-arm64/flutter
-            fi
-            echo 'export PATH="$PATH:/home/linux-arm64/flutter/bin:/home/linux-arm64/flutter/.pub-cache/bin:$HOME/.pub-cache/bin"' >> ~/.zshrc
-            source ~/.zshrc
-            echo $PATH
-
-            # Flutter doctor
-            echo "Flutter doctor -v"
-            flutter doctor -v
-
-            # Install flutter_distributor
-            echo "Install flutter_distributor"
-            dart pub global activate flutter_distributor
-
-            # Install flutter dependencies
-            echo "Install flutter dependencies"
-            flutter pub get
-
-            # Install yq
-            if ! command -v yq >/dev/null 2>&1; then
-              echo "yq not exists"
-              wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
-              chmod +x /usr/bin/yq
-            fi
-            yq --version
-            
-            # Update make_config.yaml
-            echo "Update make_config.yaml"
-            yq -i '.build_arch = "aarch64"' linux/packaging/rpm/make_config.yaml
-
-            # Build RPM
-            echo "Build RPM"
-            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" --platform linux --targets rpm --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
-
-
+      - name: Build RPM
+        run: |
+          flutter_distributor package \
+            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --platform linux \
+            --targets rpm \
+            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
+      
       # Package the build.
       - name: Copy build for rpm
         run: ls -laR
