--- a/.github/workflows/test-linux-deb-arm64.yml
+++ b/.github/workflows/test-linux-deb-arm64.yml
@@ -9,14 +9,24 @@ permissions: read-all
 jobs:
   deb:
     name: Create linux deb (aarch64)
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+
+      - name: Setup Flutter
+        shell: bash
+        run: |
+          chmod +x ./scripts/install-flutter-ubuntu-actions.sh
+          ./scripts/install-flutter-ubuntu-actions.sh
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
 
       - name: Configure .env
         run: |
@@ -24,61 +34,19 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Install qemu-user-static
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build deb
         run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-
-      - uses: addnab/docker-run-action@v3
-        with:
-          image: arm64v8/ubuntu:22.04
-          options: |
-            --rm
-            --cap-add SYS_ADMIN
-            --device /dev/fuse
-            --security-opt apparmor:unconfined
-            -v ${{ github.workspace }}:/work
-            --workdir /work
-          shell: bash
-          run: |
-            set -x
-            # Show linux info
-            echo "Show linux info"
-            uname --all
-
-            # Install dependencies for Linux
-            echo "Install dependencies for Linux"
-            apt update && apt install -y sudo
-            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
-            sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-
-            # Setup Flutter
-            echo "Setup Flutter"
-            bash ./scripts/install-flutter-ubuntu.sh
-            
-            if [ -d "/home/linux-arm64/flutter" ]; then
-              echo "🟩 ls -la"
-              ls -la /home/linux-arm64/flutter
-            fi
-            echo 'export PATH="$PATH:/home/linux-arm64/flutter/bin:/home/linux-arm64/flutter/.pub-cache/bin:$HOME/.pub-cache/bin"' >> ~/.zshrc
-            source ~/.zshrc
-            echo $PATH
-
-            # Flutter doctor
-            echo "Flutter doctor -v"
-            flutter doctor -v
-
-            # Install flutter_distributor
-            echo "Install flutter_distributor"
-            dart pub global activate flutter_distributor
-
-            # Install flutter dependencies
-            echo "Install flutter dependencies"
-            flutter pub get
-
-            # Build deb
-            echo "Build deb"
-            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" --platform linux --targets deb --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
-
+          flutter_distributor package \
+            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --platform linux \
+            --targets deb \
+            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
 
       # Package the build.
       - name: Copy build for deb
