--- a/.github/workflows/test-linux-tar-arm64.yml
+++ b/.github/workflows/test-linux-tar-arm64.yml
@@ -9,14 +9,25 @@ permissions: read-all
 jobs:
   tar:
     name: Create linux tar (aarch64)
-    runs-on: ubuntu-latest
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
+          sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt install -y p7zip-full p7zip-rar
+
+      - name: Setup Flutter
+        shell: bash
+        run: |
+          chmod +x ./scripts/install-flutter-ubuntu-actions.sh
+          ./scripts/install-flutter-ubuntu-actions.sh
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
 
       - name: Configure .env
         run: |
@@ -24,77 +35,33 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
-      - name: Install qemu-user-static
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build app
+        run: flutter build linux --dart-define-from-file=.env --target-platform=linux-arm64
+
+      - name: Install yq
         run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          if ! command -v yq >/dev/null 2>&1; then
+            echo "yq not exists"
+            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
+          fi
+          yq --version
 
-      - uses: addnab/docker-run-action@v3
-        with:
-          image: arm64v8/ubuntu:22.04
-          options: |
-            --rm
-            --cap-add SYS_ADMIN
-            --device /dev/fuse
-            --security-opt apparmor:unconfined
-            -v ${{ github.workspace }}:/work
-            --workdir /work
-          shell: bash
-          run: |
-            set -x
-            # Show linux info
-            echo "Show linux info"
-            uname --all
-
-            # Install dependencies for Linux
-            echo "Install dependencies for Linux"
-            apt update && apt install -y sudo
-            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
-            sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-            sudo apt install -y p7zip-full p7zip-rar
-
-            # Setup Flutter
-            echo "Setup Flutter"
-            bash ./scripts/install-flutter-ubuntu.sh
-
-            if [ -d "/home/linux-arm64/flutter" ]; then
-              echo "🟩 ls -la"
-              ls -la /home/linux-arm64/flutter
-            fi
-            echo 'export PATH="$PATH:/home/linux-arm64/flutter/bin:/home/linux-arm64/flutter/.pub-cache/bin:$HOME/.pub-cache/bin"' >> ~/.zshrc
-            source ~/.zshrc
-            echo $PATH
-
-            # Flutter doctor
-            echo "Flutter doctor -v"
-            flutter doctor -v
-
-            # Install flutter dependencies
-            echo "Install flutter dependencies"
-            flutter pub get
-            
-            # Build flutter
-            echo "Build flutter"
-            flutter build linux --dart-define-from-file=.env --target-platform=linux-arm64
-            
-            # Install yq
-            if ! command -v yq >/dev/null 2>&1; then
-              echo "yq not exists"
-              wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
-              chmod +x /usr/bin/yq
-            fi
-            yq --version
-            
-            # Get version
-            echo "Get version"
-            version=$(yq '.version' pubspec.yaml)
-
-            # Build tar
-            echo "Build tar"
-            baseDir=$(pwd)
-            archiveName="picguard_"$version"_linux_aarch64.tar.gz"
-            cd build/linux/arm64/release/bundle
-            tar -czaf $archiveName ./*
-            mv $archiveName "$baseDir/"
+      - name: Build tar
+        run: |
+          baseDir=$(pwd)
+          VERSION=$(yq '.version' pubspec.yaml)
+          echo "$VERSION"
+          archiveName="picguard_"$VERSION"_linux_aarch64.tar.gz"
+          cd build/linux/arm64/release/bundle
+          tar -czaf $archiveName ./*
+          mv $archiveName "$baseDir/"
 
       # Package the build.
       - name: Copy build for tar
