--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,7 +89,7 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.kjxbyz.watermarkassistant" "\0"
+            VALUE "CompanyName", "Insco LLC" "\0"
             VALUE "FileDescription", "Your pictures, your signature." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "PicGuard" "\0"
