Update bundle id

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -651,10 +651,10 @@ jobs:
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERT_DEV_PATH=$RUNNER_TEMP/ios_development.cer
           CERT_PATH=$RUNNER_TEMP/ios_distribution.cer
-          PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_dev.mobileprovision
-          PP_PATH=$RUNNER_TEMP/watermark_assistant_appstore.mobileprovision
-          PP_PRO_DEV_PATH=$RUNNER_TEMP/watermark_assistant_pro_dev.mobileprovision
-          PP_PRO_PATH=$RUNNER_TEMP/watermark_assistant_pro_appstore.mobileprovision
+          PP_DEV_PATH=$RUNNER_TEMP/picguard_dev.mobileprovision
+          PP_PATH=$RUNNER_TEMP/picguard_appstore.mobileprovision
+          PP_PRO_DEV_PATH=$RUNNER_TEMP/picguard_pro_dev.mobileprovision
+          PP_PRO_PATH=$RUNNER_TEMP/picguard_pro_appstore.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
@@ -732,7 +732,7 @@ jobs:
             echo "$RUNNER_TEMP/pg-signing.keychain-db"
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
-          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.mobileprovision
+          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/picguard_*.mobileprovision
           rm -f .env
 
   ios_pro:
@@ -785,10 +785,10 @@ jobs:
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
           CERT_DEV_PATH=$RUNNER_TEMP/ios_development.cer
           CERT_PATH=$RUNNER_TEMP/ios_distribution.cer
-          PP_DEV_PATH=$RUNNER_TEMP/watermark_assistant_dev.mobileprovision
-          PP_PATH=$RUNNER_TEMP/watermark_assistant_appstore.mobileprovision
-          PP_PRO_DEV_PATH=$RUNNER_TEMP/watermark_assistant_pro_dev.mobileprovision
-          PP_PRO_PATH=$RUNNER_TEMP/watermark_assistant_pro_appstore.mobileprovision
+          PP_DEV_PATH=$RUNNER_TEMP/picguard_dev.mobileprovision
+          PP_PATH=$RUNNER_TEMP/picguard_appstore.mobileprovision
+          PP_PRO_DEV_PATH=$RUNNER_TEMP/picguard_pro_dev.mobileprovision
+          PP_PRO_PATH=$RUNNER_TEMP/picguard_pro_appstore.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
@@ -866,7 +866,7 @@ jobs:
             echo "$RUNNER_TEMP/pg-signing.keychain-db"
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
-          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/watermark_assistant_*.mobileprovision
+          rm -f ~/Library/MobileDevice/Provisioning\ Profiles/picguard_*.mobileprovision
           rm -f .env
 
   macos_dmg:
@@ -1192,7 +1192,7 @@ jobs:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_installer_certificate.p12
           # Mac App Distribution
           THIRD_PARTY_MAC_DEVELOPER_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_application_certificate.p12
-          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH=$RUNNER_TEMP/watermark_assistant_mac_appstore.provisionprofile
+          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH=$RUNNER_TEMP/picguard_mac_appstore.provisionprofile
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
@@ -1213,7 +1213,7 @@ jobs:
           
           # apply provisioning profile
           # https://developer.apple.com/documentation/bundleresources/placing_content_in_a_bundle/
-          # security cms -D -i watermark_assistant_mac_appstore.provisionprofile
+          # security cms -D -i picguard_mac_appstore.provisionprofile
           mv $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PATH build/macos/Build/Products/Release/PicGuard.app/Contents/embedded.provisionprofile
         env:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC }}
@@ -1334,7 +1334,7 @@ jobs:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_installer_certificate.p12
           # Mac App Distribution
           THIRD_PARTY_MAC_DEVELOPER_APPLICATION_CERTIFICATE_PATH=$RUNNER_TEMP/build_mac_developer_application_certificate.p12
-          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH=$RUNNER_TEMP/watermark_assistant_pro_mac_appstore.provisionprofile
+          THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH=$RUNNER_TEMP/picguard_pro_mac_appstore.provisionprofile
           KEYCHAIN_PATH=$RUNNER_TEMP/pg-signing.keychain-db
 
           # import certificate and provisioning profile from secrets
@@ -1355,7 +1355,7 @@ jobs:
           
           # apply provisioning profile
           # https://developer.apple.com/documentation/bundleresources/placing_content_in_a_bundle/
-          # security cms -D -i watermark_assistant_pro_mac_appstore.provisionprofile
+          # security cms -D -i picguard_pro_mac_appstore.provisionprofile
           mv $THIRD_PARTY_MAC_DEVELOPER_APPLICATION_PP_PRO_PATH build/macos/Build/Products/Release-pro/PicGuard\ Pro.app/Contents/embedded.provisionprofile
         env:
           THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC: ${{ secrets.THIRD_PARTY_MAC_DEVELOPER_INSTALLER_P12_BASE64_MAC }}
