--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ if (proKeystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.kjxbyz.watermarkassistant"
+    namespace "com.kjxbyz.picguard"
     compileSdkVersion 34
 //    ndkVersion flutter.ndkVersion
 
@@ -53,7 +53,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.kjxbyz.watermarkassistant"
+        applicationId "com.kjxbyz.picguard"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 24
