--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = PicGuard
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.kjxbyz.watermarkassistant.mac
+PRODUCT_BUNDLE_IDENTIFIER = com.kjxbyz.picguard.mac
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 PicGuard. All rights reserved.
