--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
       - linux_snap
       - linux_snap_aarch64
       - windows_msi
-      - windows_msix
+      - windows_msix_free
       - windows_msix_pro
       - windows_exe
       - windows_zip
@@ -210,7 +210,7 @@ jobs:
 #        - linux_snap
 #        - linux_snap_aarch64
 #        - windows_msi
-#        - windows_msix
+#        - windows_msix_free
 #        - windows_msix_pro
 #        - windows_exe
 #        - windows_zip
@@ -3150,8 +3150,8 @@ jobs:
             echo "File($pwd\.env) doesn't exist."
           }
 
-  windows_msix:
-    name: Create windows msix
+  windows_msix_free:
+    name: Create windows msix (free)
     runs-on: windows-latest
     needs:
       - create_release
