--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
       "groupName": "androidx.window"
     },
     {
-      "matchPackageNames": ["slang", "slang_flutter", "slang_build_runner"],
+      "matchPackageNames": ["slang_flutter", "slang_build_runner"],
       "groupName": "slang"
     }
   ]
