--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -201,10 +201,6 @@ jobs:
         with:
           node-version: 18
 
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 9
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -290,12 +286,10 @@ jobs:
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
       - name: Install appdmg
-        run: |
-          pnpm add -g appdmg
+        run: npm install -g appdmg
 
       - name: Build DMG
-        run: |
-          bash scripts/build-dmg.sh
+        run: bash scripts/build-dmg.sh
 
       # Package the build.
       - name: Copy build for snap
