--- a/.github/workflows/test-macos-dmg.yml
+++ b/.github/workflows/test-macos-dmg.yml
@@ -18,10 +18,6 @@ jobs:
         with:
           node-version: 18
 
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 9
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -107,8 +103,7 @@ jobs:
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
       - name: Install appdmg
-        run: |
-          pnpm add -g appdmg
+        run: npm install -g appdmg
 
       - name: Install yq
         run: |
@@ -119,8 +114,7 @@ jobs:
           yq --version
 
       - name: Build DMG
-        run: |
-          bash scripts/build-dmg.sh
+        run: bash scripts/build-dmg.sh
 
       # Package the build.
       - name: Copy build for dmg
