--- a/.github/workflows/test-linux-rpm-arm64-deprecated.yml
+++ b/.github/workflows/test-linux-rpm-arm64-deprecated.yml
@@ -98,7 +98,11 @@ jobs:
 
             # Build RPM
             echo "Build RPM"
-            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" --platform linux --targets rpm --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
+            flutter_distributor package \
+              --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
+              --platform linux \
+              --targets rpm \
+              --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
 
 
       # Package the build.
