--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -915,7 +915,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env
+          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install certificates
         env:
@@ -1047,7 +1047,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env
+          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install certificates
         run: |
@@ -1473,7 +1473,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env
+          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install certificates
         env:
@@ -1605,7 +1605,7 @@ jobs:
           echo "╠ Removing build products and intermediate files from the build root..."
           cd macos && xcodebuild clean && cd ..
           echo "╠ Releasing to app store..."
-          flutter build macos --dart-define-from-file=.env
+          flutter build macos --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Install certificates
         env:
@@ -1744,7 +1744,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
             --platform linux \
             --targets appimage \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
@@ -1829,7 +1829,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets appimage \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_aarch64.{{ext}}
@@ -1904,7 +1904,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
             --platform linux \
             --targets pacman \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
@@ -1983,7 +1983,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets pacman \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_aarch64.{{ext}}
@@ -2056,7 +2056,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
             --platform linux \
             --targets deb \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
@@ -2129,7 +2129,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets deb \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_aarch64.{{ext}}
@@ -2206,7 +2206,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
             --platform linux \
             --targets rpm \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
@@ -2297,7 +2297,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets rpm \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_aarch64.{{ext}}
@@ -2370,7 +2370,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
             --platform linux \
             --targets zip \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_amd64.{{ext}}
@@ -2444,7 +2444,7 @@ jobs:
         run: |
           VERSION_SUFFIX="$([[ "$ENV" == "staging" ]] && echo ".pre" || echo "")"
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets zip \
             --artifact-name {{name}}_{{build_name}}+{{build_number}}"$VERSION_SUFFIX"_{{platform}}_aarch64.{{ext}}
@@ -2511,7 +2511,7 @@ jobs:
         run: flutter pub get
 
       - name: Build flutter
-        run: flutter build linux --dart-define-from-file=.env --target-platform=linux-x64
+        run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart --target-platform=linux-x64
 
       - name: Build tar
         run: |
@@ -2585,7 +2585,7 @@ jobs:
         run: flutter pub get
 
       - name: Build app
-        run: flutter build linux --dart-define-from-file=.env --target-platform=linux-arm64
+        run: flutter build linux --dart-define-from-file=.env --target lib/main_free.dart --target-platform=linux-arm64
 
       - name: Install yq
         run: |
@@ -3066,7 +3066,7 @@ jobs:
         run: flutter pub get
 
       - name: Build windows
-        run: flutter build windows --dart-define-from-file=.env
+        run: flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
       - name: Update msi version
         shell: pwsh
@@ -3475,9 +3475,14 @@ jobs:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
 
       - name: Build exe
+        shell: pwsh
         run: |
           $VERSION_SUFFIX = $(If ($env:ENV -eq "staging") {".pre"} Else {""})
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets exe --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
+          flutter_distributor package `
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
+            --platform windows `
+            --targets exe `
+            --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
         env:
           ENV: ${{ github.event.inputs.env }}
 
@@ -3569,9 +3574,14 @@ jobs:
         run: flutter pub get
 
       - name: Build zip
+        shell: pwsh
         run: |
           $VERSION_SUFFIX = $(If ($env:ENV -eq "staging") {".pre"} Else {""})
-          flutter_distributor package --flutter-build-args "dart-define-from-file=.env" --platform windows --targets zip --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
+          flutter_distributor package `
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart" `
+            --platform windows `
+            --targets zip `
+            --artifact-name "{{name}}_{{build_name}}+{{build_number}}$VERSION_SUFFIX`_{{platform}}_x64.{{ext}}"
         env:
           ENV: ${{ github.event.inputs.env }}
 
