--- a/.github/workflows/test-linux-appimage-arm64-deprecated.yml
+++ b/.github/workflows/test-linux-appimage-arm64-deprecated.yml
@@ -86,7 +86,11 @@ jobs:
             
             # Build AppImage
             echo "Build AppImage"
-            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" --platform linux --targets appimage --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
+            flutter_distributor package \
+              --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
+              --platform linux \
+              --targets appimage \
+              --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
 
       # Package the build.
       - name: Copy build for AppImage
