--- a/.github/workflows/test-linux-appimage-arm64.yml
+++ b/.github/workflows/test-linux-appimage-arm64.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Build AppImage
         run: |
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets appimage \
             --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
