--- a/.github/workflows/test-linux-appimage.yml
+++ b/.github/workflows/test-linux-appimage.yml
@@ -43,7 +43,12 @@ jobs:
         run: flutter pub get
 
       - name: Build AppImage
-        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets appimage --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
+        run: |
+          flutter_distributor package \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" \
+            --platform linux \
+            --targets appimage \
+            --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
 
       # Package the build.
       - name: Copy build for AppImage
