--- a/.github/workflows/test-linux-rpm-arm64.yml
+++ b/.github/workflows/test-linux-rpm-arm64.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build RPM
         run: |
           flutter_distributor package \
-            --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" \
+            --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
             --platform linux \
             --targets rpm \
             --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
