--- a/.github/workflows/test-linux-zip-arm64-deprecated.yml
+++ b/.github/workflows/test-linux-zip-arm64-deprecated.yml
@@ -78,7 +78,11 @@ jobs:
 
             # Build zip
             echo "Build zip"
-            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64" --platform linux --targets zip --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
+            flutter_distributor package \
+              --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-arm64" \
+              --platform linux \
+              --targets zip \
+              --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_aarch64.{{ext}}'
 
 
       # Package the build.
