--- a/.github/workflows/test-linux-zip.yml
+++ b/.github/workflows/test-linux-zip.yml
@@ -41,7 +41,7 @@ jobs:
         run: flutter pub get
 
       - name: Build zip
-        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-x64" --platform linux --targets zip --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
+        run: flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target=lib/main_free.dart,target-platform=linux-x64" --platform linux --targets zip --artifact-name '{{name}}_{{build_name}}+{{build_number}}_{{platform}}_amd64.{{ext}}'
 
       # Package the build.
       - name: Copy build for zip
